[package]
name = "generator"
version = "0.1.0"
authors = ["Timothy Mc Alister <timothy@mcalister.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noise = "0.6.0"
gif = "0.10.3"
hsl = "0.1.1"
indicatif = "0.15.0"
